Add vulnerability details for arbitrary file access
Documented the arbitrary file read/download vulnerability in the RuoYi management system, including the exploit payloads for both Windows and Linux environments.

--- a/Java开源项目审计/若依管理系统4.2.md
+++ b/Java开源项目审计/若依管理系统4.2.md
@@ -91,14 +91,52 @@ SysDeptMapper,SysUserMapper,SysRoleMapper可能存在SQL注入漏洞
 
 位于 src/main/java/com/ruoyi/web/controller/common/CommonController.java
 
+<img width="1220" height="762" alt="Image" src="https://github.com/user-attachments/assets/ea689ba0-bd69-41a6-b422-bfd0370f7167" />
+
+通过注释可以看出这个功能是本地资源通用下载
+注解接口为 /common/download/resource 接收参数resource
+
+首先获取本地资源路径 Global.getProfile()
+Global是全局类 profile为上传路径
+
+<img width="929" height="762" alt="Image" src="https://github.com/user-attachments/assets/2eb6cd06-ac00-4d28-8bd3-12b2bf97c2d4" />
+
+然后获取数据资源地址
+
+String downloadPath = localPath + StringUtils.substringAfter(resource, Constants.RESOURCE_PREFIX);
+
+使用了StringUtils类 substringAfter 获取Constants.RESOURCE_PREFIX之后的字符串
+跟进RESOURCE_PREFIX 
+<img width="929" height="762" alt="Image" src="https://github.com/user-attachments/assets/3c00b838-8634-4c3f-9ebb-3c3f0003a602" />
 
 
+RESOURCE_PREFIX为 /profile
 
+下面就是获取获取名称 获取文件
 
+根据刚才代码分析可以推断出接口为
+/common/download/resource?resource=/profile/{filename}
 
+端点调试一下 访问路径
+http://127.0.0.1/common/download/resource?resource=/profile/
 
+<img width="1239" height="762" alt="Image" src="https://github.com/user-attachments/assets/1f39e03d-7b6a-4bba-b3c9-53a567125338" />
 
+根目录位于D:/ruoyi/UploadPath
 
+尝试读取D:/Goby/test.txt
 
+那么payload应该为：
+/common/download/resourece?resource=/profile/../../../Goby/test.txt
 
+<img width="788" height="749" alt="Image" src="https://github.com/user-attachments/assets/1a7cbaae-6bfb-445f-8022-02d71fa829d6" />
 
+<img width="879" height="710" alt="Image" src="https://github.com/user-attachments/assets/c157ee40-e66e-466f-a62e-54e158b28d65" />
+
+下载成功 存在任意文件读取/下载漏洞
+在配置文件application.yml中 Linux位于 /home/ruoyi/uploadPath
+
+<img width="1237" height="762" alt="Image" src="https://github.com/user-attachments/assets/dec0510d-f73a-468e-99f8-bed54f65fb07" />
+
+linux的payload应该是
+common/download/resource?recource=/profile/../../../etc/passwd
